<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.juneau001</groupId>
    <artifactId>capitulo01</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>capitulo01-1.0-SNAPSHOT</name>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jakartaee>10.0.0</jakartaee>
         <version.payara>6.2023.9</version.payara>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>${jakartaee}</version>
            <scope>provided</scope>
        </dependency>
        
          <dependency>
      <groupId>jakarta.faces</groupId>
      <artifactId>jakarta.faces-api</artifactId>
      <version>4.0.1</version>
      <type>jar</type>
    </dependency>
    </dependencies>
    
    <build>
             <!--<finalName>${final.name}</finalName>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
            </plugin>
            
              <plugin>
                <groupId>fish.payara.maven.plugins</groupId>
                <artifactId>payara-micro-maven-plugin</artifactId>
                <configuration>
                    <payaraVersion>${version.payara}</payaraVersion>
                    <deployWar>false</deployWar>
                    <commandLineOptions>
                        <option>
                            <key>--autoBindHttp</key>
                        </option>
                        <!--puerto 9001 -->
                     
                        <!-- desabilita Hazelcas -->
                        <option>
                            <key>--noHazelcast</key>
                        </option>
                        <option>
                            <key>--logo</key>
                        </option>

                        <option>
                            <key>--deploy</key>
                            <value>${project.build.directory}/${project.build.finalName}</value>
                        </option>                     
                    </commandLineOptions>
                    <!--
                    JDK 17+ Soluciona error con EJB
                    -->                         
                    <javaCommandLineOptions>
                        <option>
                            <key>--add-opens</key>
                            <value>java.base/java.io=ALL-UNNAMED</value>
                        </option>
                    </javaCommandLineOptions>                
                </configuration>
                <version>2.0</version>
            </plugin>
        </plugins>
    </build>
</project>